chore(description list): update styling and rename classes

--- a/stories/templates/DescriptionList/additional.mdx
+++ b/stories/templates/DescriptionList/additional.mdx
@@ -1,8 +1,8 @@
-## Title and subtitle slots 
+## Title and description slots 
 
-Title and subtitle are optional items. They provide more context to the subtitle list as a group 
+Title and description are optional items. They provide more context to the description list as a group 
 
-Use `slot=title` and `slot=subtitle` to pass in title and subtitle 
+Use `slot=title` and `slot=description` to pass in title and description 
 
 <Canvas of={DescriptionListStories.OptionalTitleDescription}>
   <Story of={DescriptionListStories.OptionalTitleDescription} />
