chore(button): add full width button example

--- a/stories/templates/Button/additional.mdx
+++ b/stories/templates/Button/additional.mdx
@@ -11,6 +11,14 @@ The default variant is `primary`. Modify the `variant` prop to the intended valu
   <Story of={ButtonStories.Variants} />
 </Canvas>
 
+## Full Width
+
+Buttons can fill any container width. This is common on mobile devices where there's a shorter overall viewport or where buttons are stacked to make buttons visually consistent.
+
+<Canvas of={ButtonStories.FullWidth}>
+  <Story of={ButtonStories.FullWidth} />
+</Canvas>
+
 ## Sizes
 
 The default button size is medium. Add `size="lg"`,` size="sm"` for additional sizes.
