docs(storybook): update storybook documentation for grid system

--- a/stories/style/GridSystem.mdx
+++ b/stories/style/GridSystem.mdx
@@ -23,3 +23,9 @@ import * as GridStories from "./grid.stories.js"
 <Canvas of={GridStories.HiddenCol} >
   <Story of={GridStories.HiddenCol} />
 </Canvas>
+
+## Center Column
+
+<Canvas of={GridStories.CenterCol} >
+  <Story of={GridStories.CenterCol} />
+</Canvas>
