docs(CheckboxGroup): update to new specs

--- a/stories/form-validation/validation.mdx
+++ b/stories/form-validation/validation.mdx
@@ -41,10 +41,11 @@ Try focusing and blurring on the controls without inputting any value to observe
 | **Component**      | **Status**                                  | **Constraint Validations**                                                                   | **SGDS Validation Behaviour**                                                                                                                                                                                               | **Additional SGDS Custom Validation** |
 | ------------------ | ------------------------------------------- | -------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------- |
 | **Checkbox**       | Implemented                                 | 1. Required                                                                                  | 1. Validation after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.                           |                                       |
+| **CheckboxGroup**  | Implemented                                 | 1. Required                                                                                  | 1. Validation after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.                           |                                       |
 | **Input**          | Implemented                                 | 1. Required <br/> 2. Pattern <br/> 3. Min <br/> 4. Max <br/> 5. MinLength <br/> 6. MaxLength | 1. Validation shows on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.   |                                       |
 | **QuantityToggle** | Implemented                                 | 1. Min <br/> 2. Max                                                                          | 1. Validation occurs on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.  |                                       |
 | **Radio**          | Implemented                                 | 1. Required                                                                                  | 1. Validation occurs after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.                    |                                       |
 | **Textarea**       | Implemented                                 | 1. Required <br/> 2. MinLength <br/> 3. MaxLength                                            | 1. Validation shows on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.   |                                       |
 | **FileUpload**     | Partially implemented (file size limit WIP) | 1. Required                                                                                  | 1. Validation happens on submission <br/> 2. Validation resets when form resets. <br/> 3. When disabled, validation is disabled.                                                                                            | File size limit validation (WIP)      |
-| **Combobox**       | Implemented                                 | 1. Required                                                                                  | 1. Validation occurs on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.                                                                                                                                                                                                                            |                                       |
+| **Combobox**       | Implemented                                 | 1. Required                                                                                  | 1. Validation occurs on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.  |                                       |
 | **Datepicker**     | Implemented                                 | 1. Required <br/> 2. Min <br/> 3. Max                                                        | 1. Validation happens on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled. |                                       |
