docs(input): add Leading Icon example in storybook

--- a/stories/templates/Input/additional.mdx
+++ b/stories/templates/Input/additional.mdx
@@ -51,7 +51,11 @@ Use the string type `prefix` or `suffix` prop to add more indication and meaning
   <Story of={InputStories.SuffixInput} />
 </Canvas>
 
-## Leading Icon <sgds-badge show> work in progress </sgds-badge>
+## Leading Icon 
+
+<Canvas of={InputStories.LeadingIcon}>
+  <Story of={InputStories.LeadingIcon} />
+</Canvas>
 
 
 ## Validation 
