chore(Table): added table stories and test case

--- a/stories/templates/Table/additional.mdx
+++ b/stories/templates/Table/additional.mdx
@@ -17,3 +17,11 @@ Use `responsive="sm"`, `responsive="md"` , `responsive="lg"`, or `responsive="xl
 <Canvas of={TableStories.Responsive}>
   <Story of={TableStories.Responsive} />
 </Canvas>
+
+## Structured Elements
+
+Use `sgds-table-row`, `sgds-table-cell`, `sgds-table-head` to build the whole table using structured elements
+
+<Canvas of={TableStories.StructuredElements}>
+  <Story of={TableStories.StructuredElements} />
+</Canvas>
