--- a/stories/templates/Badge/additional.mdx
+++ b/stories/templates/Badge/additional.mdx
@@ -2,7 +2,7 @@
 
 The default variant is `info`. Modify the `variant` prop to the intended value.
 
-- Use `info` badge to  additional information or context that might be helpful to the user but doesn’t require immediate attention. Commonly used for non-urgent updates, background details, or status labels.
+- Use `info` badge to additional information or context that might be helpful to the user but doesn’t require immediate attention. Commonly used for non-urgent updates, background details, or status labels.
 - Use `success` badge to indicates successful completion or positive status, often associated with actions like saving, submitting, or completing tasks. This badge typically uses green and reassures users that the intended action was successful.
 - Use `danger` badge to alert users of a critical error or failure. Users may be prevented to proceed until the issue is rectified. This badge is typically styled in red to signify urgency or caution.
 - Use `warning` badge to indicate a potential issue or risk that users should be aware of but might not require immediate action. It serves as a cautionary signal, commonly styled in yellow or orange.
@@ -14,7 +14,7 @@ Filled badges are typically more visually prominent and are suitable for urgent,
   <Story of={BadgeStories.Variants} />
 </Canvas>
 
- ## Outlined variants
+## Outlined variants
 
 Outlined badges have a lighter appearance, making them more subtle, which is suitable for informative tags or less critical content.
 
@@ -22,8 +22,7 @@ Outlined badges have a lighter appearance, making them more subtle, which is sui
   <Story of={BadgeStories.OutlinedVariants} />
 </Canvas>
 
-
-## Dismissible 
+## Dismissible
 
 A dismissible badge is used to display temporary information or alerts that users can remove once they've acknowledged or no longer need. It helps keep the interface clean and gives users control over what content remains visible.
 
@@ -34,17 +33,23 @@ When the close button on badge is clicked to closed, the badge component sets `s
   <Story of={BadgeStories.Dismissible} />
 </Canvas>
 
+## Icon
 
-## Icon 
-
-A badge with a leading icon is used to quickly convey the purpose or status of the badge through a visual symbol, enhancing recognition and clarity. 
+A badge with a leading icon is used to quickly convey the purpose or status of the badge through a visual symbol, enhancing recognition and clarity.
 It is ideal for status indicators, categorisation, or alert messages, and helps users instantly understand the badge's meaning.
 
 The leading icon is added via `slot="icon"`.
 
 **NOTE**: Dismissible badges cannot have leading icon to prevent confusion with the clickable close button
 
-
 <Canvas of={BadgeStories.WithIcon}>
   <Story of={BadgeStories.WithIcon} />
+</Canvas>
+
+## Truncation
+
+A badge with a long text will be truncated to fit the parent's width and a tooltip will be enabled for users to view the full text.
+
+<Canvas of={BadgeStories.WithTruncation}>
+  <Story of={BadgeStories.WithTruncation} />
 </Canvas>
