docs(card): add an example of the usage of menu slot

--- a/stories/templates/Card/additional.mdx
+++ b/stories/templates/Card/additional.mdx
@@ -84,3 +84,11 @@ The `tinted` prop applies a subtle tinted background to the card, enhancing its 
 <Canvas of={CardStories.Tinted}>
   <Story of={CardStories.Tinted} />
 </Canvas>
+
+## With Overflow Menu
+
+The `menu` slot is positioned at the top-right corner of the card, allowing you to add an overflow or actions menu to provide quick access to additional actions or options. This is useful for managing card-specific controls without cluttering the main content.
+
+<Canvas of={CardStories.OverflowMenu}>
+  <Story of={CardStories.OverflowMenu} />
+</Canvas>
