docs(storybook): fix button variant typo

--- a/stories/templates/Button/additional.mdx
+++ b/stories/templates/Button/additional.mdx
@@ -3,7 +3,7 @@
 The default variant is `primary`. Modify the `variant` prop to the intended value.
 
 - Use `primary` buttons to show the key action on a page or view. Most pages should only have one primary action.
-- Use `outlined` buttons next to primary buttons to indicate alternative or less pronounced actions.
+- Use `outline` buttons next to primary buttons to indicate alternative or less pronounced actions.
 - Use `ghost` button for supplementary action as they are subtle in their appearance 
 - Use `danger` buttons  to remove things or for irreversible actions. 
 
