feat(drawer): add size prop

--- a/stories/templates/Drawer/additional.mdx
+++ b/stories/templates/Drawer/additional.mdx
@@ -12,3 +12,17 @@ By default, the drawer opens from the right (end). You can specify different pla
 <Canvas of={DrawerStories.Placement}>
   <Story of={DrawerStories.Placement} />
 </Canvas>
+
+## Sizes
+
+The drawer supports different sizes for its panel. This controls the **width** (when placed at start/end) or the **height** (when placed at top/bottom).
+
+You can specify the size using the `size` attribute:
+
+- `size="sm"`: Small
+- `size="md"`: Medium
+- `size="lg"`: Large
+
+<Canvas of={DrawerStories.Sizes}>
+  <Story of={DrawerStories.Sizes} />
+</Canvas>
