docs(badge): update documentation for variant examples

--- a/stories/templates/Badge/additional.mdx
+++ b/stories/templates/Badge/additional.mdx
@@ -1,12 +1,16 @@
 ## Filled variants
 
-The default variant is `info`. Modify the `variant` prop to the intended value.
+The default variant is `primary`. Modify the `variant` prop to change the badge’s appearance according to its purpose.
 
-- Use `info` badge to additional information or context that might be helpful to the user but doesn’t require immediate attention. Commonly used for non-urgent updates, background details, or status labels.
+- Use `primary` badge to additional information or context that might be helpful to the user but doesn’t require immediate attention. Commonly used for non-urgent updates, background details, or status labels.
+- Use `accent` badge to emphasize secondary information or visually distinguish complementary categories. Ideal for drawing attention to supporting tags or labels without overwhelming the main content.
 - Use `success` badge to indicates successful completion or positive status, often associated with actions like saving, submitting, or completing tasks. This badge typically uses green and reassures users that the intended action was successful.
 - Use `danger` badge to alert users of a critical error or failure. Users may be prevented to proceed until the issue is rectified. This badge is typically styled in red to signify urgency or caution.
 - Use `warning` badge to indicate a potential issue or risk that users should be aware of but might not require immediate action. It serves as a cautionary signal, commonly styled in yellow or orange.
+- Use `cyan` badge to convey neutral or informational updates, often representing general notices, pending statuses, or background context. Styled in cool tones for a calm, balanced appearance.
+- Use `purple` badge to represent special states, unique tags, or creative categories. Often used for custom labels or distinguishing elements that don’t fit standard semantic categories.
 - Use `neutral` badge to provide general information or categorization that doesn’t require immediate attention or imply any urgency. It typically has a muted or gray color to avoid drawing too much focus.
+- Use `white` badge to display subtle information on darker backgrounds. It maintains a clean and minimal look, ensuring readability while keeping focus on surrounding content.
 
 Filled badges are typically more visually prominent and are suitable for urgent, high-priority, or primary information.
 
