feat(fouc): new styles to mitigate fouc

--- a/stories/troubleshoot/Faq.mdx
+++ b/stories/troubleshoot/Faq.mdx
@@ -1,7 +1,7 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import faq from "../docs/FAQ.md?raw";
+import faq from "../../docs/FAQ.md?raw";
 
-<Meta title="Troubleshooting/FAQ" />
+<Meta title="Troubleshoot/FAQ" />
 
 <Markdown>{faq}</Markdown>
 
