docs(Button): update storybook with new tone and size

--- a/stories/templates/Button/additional.mdx
+++ b/stories/templates/Button/additional.mdx
@@ -4,11 +4,24 @@ The default variant is `primary`. Modify the `variant` prop to the intended valu
 
 - Use `primary` buttons to show the key action on a page or view. Most pages should only have one primary action.
 - Use `outline` buttons next to primary buttons to indicate alternative or less pronounced actions.
-- Use `ghost` button for supplementary action as they are subtle in their appearance 
-- Use `danger` buttons  to remove things or for irreversible actions. 
+- Use `ghost` button for supplementary action as they are subtle in their appearance
+- Use `danger` buttons to remove things or for irreversible actions.
 
 <Canvas of={ButtonStories.Variants}>
   <Story of={ButtonStories.Variants} />
+</Canvas>
+
+## Tone
+
+Tone sets the colour of the button. Use the `tone` prop to modify the button's appearance.
+
+- Use `brand` tone for main action in the interface. Using the brand color draws attention.
+- Use `danger` tone for destructive or irreversible action
+- Use `fixed-light` tone for high-contrast white button for dark or image backgrounds.
+- Use `neutral` tone for buttons for high-contrast black/gray button on light backgrounds.
+
+<Canvas of={ButtonStories.Tone}>
+  <Story of={ButtonStories.Tone} />
 </Canvas>
 
 ## Full Width
@@ -21,11 +34,12 @@ Buttons can fill any container width. This is common on mobile devices where the
 
 ## Sizes
 
-The default button size is medium. Add `size="lg"`,` size="sm"` for additional sizes.
+The default button size is medium. Add `size="xs"`,` size="sm"`,` size="lg"` for additional sizes.
 
 - Large buttons are used sparingly across the UI. They may be used for page components that demand attention, such as on the homepage banner.
 - The medium (default) button is the standard size for buttons everywhere.
-- Small button should be used sparingly and only in places where the UI is very dense.   
+- Small button should be used sparingly and only in places where the UI is very dense.
+- Extra small button should used sparingly in very tight UI like tooltips or inline actions.
 
 <Canvas of={ButtonStories.Sizes}>
   <Story of={ButtonStories.Sizes} />
@@ -48,9 +62,17 @@ Add `disabled` prop to the button to apply the disabled state
   <Story of={ButtonStories.Disabled} />
 </Canvas>
 
+## Loading state
+
+To set a button's loading state, set the component's `loading` prop. When loading is true, it shows a spinner and the slotted content gets overridden.
+
+<Canvas of={ButtonStories.Loading}>
+  <Story of={ButtonStories.Loading} />
+</Canvas>
+
 ## With Icon
 
-Leading icons can visually represent a button's action to lessen the cognitive load for users. Use `slot="rightIcon"` to add a leading icon to the button 
+Leading icons can visually represent a button's action to lessen the cognitive load for users. Use `slot="rightIcon"` to add a leading icon to the button
 Trailing icons should be used in specific use cases as a nod to the interaction. Use `slot="leftIcon"` to add a trailing icon to the button
 
 <Canvas of={ButtonStories.ButtonWithIcon}>
