test(button): update test cases for button and spinner

--- a/stories/templates/Spinner/additional.mdx
+++ b/stories/templates/Spinner/additional.mdx
@@ -25,3 +25,11 @@ Set a label for the spinner with `label` prop of string type.
 <Canvas of={SpinnerStories.Label}>
   <Story of={SpinnerStories.Label} />
 </Canvas>
+
+## Label - Horizontal
+
+Set the orientation of the label to horizontal with `orientation` prop set to "horizontal".
+
+<Canvas of={SpinnerStories.LabelHorizontal}>
+  <Story of={SpinnerStories.LabelHorizontal} />
+</Canvas>
