docs(Link): update storybook with more examples

--- a/stories/templates/Link/additional.mdx
+++ b/stories/templates/Link/additional.mdx
@@ -1,6 +1,4 @@
-## Danger variant 
-
-Danger variant for link
+## Variants
 
 <Canvas of={LinkStories.Variants}>
   <Story of={LinkStories.Variants} />
@@ -8,10 +6,22 @@ Danger variant for link
 
 ## Sizes 
 
-Links are available in `size=sm` `size=md` or `size=lg`
+Links are available in `size=xs`, `size=sm` `size=md` or `size=lg`
 
 <Canvas of={LinkStories.Size}>
   <Story of={LinkStories.Size} />
+</Canvas>
+
+## Disabled
+
+<Canvas of={LinkStories.Disabled}>
+  <Story of={LinkStories.Disabled} />
+</Canvas>
+
+## Active
+
+<Canvas of={LinkStories.Active}>
+  <Story of={LinkStories.Active} />
 </Canvas>
 
 ## Icons 
