feat(Link): new tone prop to replace deprecated variant prop

--- a/stories/templates/Link/additional.mdx
+++ b/stories/templates/Link/additional.mdx
@@ -1,7 +1,7 @@
-## Variants
+## Tone
 
-<Canvas of={LinkStories.Variants}>
-  <Story of={LinkStories.Variants} />
+<Canvas of={LinkStories.Tones}>
+  <Story of={LinkStories.Tones} />
 </Canvas>
 
 ## Sizes 
@@ -38,4 +38,12 @@ Adding `target="_blank"` to the anchor tag automatically adds an external link i
 
 <Canvas of={LinkStories.ExternalLink}>
   <Story of={LinkStories.ExternalLink} />
+</Canvas>
+
+## Variants (deprecated)
+
+Since v3.6.0, `variant` is deprecated in favour of `tone` prop
+
+<Canvas of={LinkStories.Variants}>
+  <Story of={LinkStories.Variants} />
 </Canvas>
