docs(SearchInput): stories wip

--- a/stories/templates/Select/additional.mdx
+++ b/stories/templates/Select/additional.mdx
@@ -8,6 +8,14 @@ Populate menu list of the select with `<sgds-select-option>`.
   <Story of={SelectStories.SelectDefaultSlot} />
 </Canvas>
 
+### Loading state
+
+Loading state of select is shown in the menu when `loading` property is set to true.
+
+<Canvas of={SelectStories.SelectLoading}>
+  <Story of={SelectStories.SelectLoading} />
+</Canvas>
+
 ### `menuList` property (deprecated)
 
 Populate menu list of the select with `menuList` property.
