docs(*): add demo link

--- a/stories/templates/ComboBox/additional.mdx
+++ b/stories/templates/ComboBox/additional.mdx
@@ -140,3 +140,6 @@ Set the `async` attribute to true. You can then hook onto the `sgds-input` event
 <Canvas of={ComboBoxStories.AsyncCombobox}>
   <Story of={ComboBoxStories.AsyncCombobox} />
 </Canvas>
+
+  [React demo](https://codesandbox.io/p/github/clukhei/sgds-asynchronous-combo-box-demo)
+
