--- a/stories/foundation/GridSystem.mdx
+++ b/stories/foundation/GridSystem.mdx
@@ -1,31 +1,31 @@
 import { Meta, Markdown, Canvas, Story } from "@storybook/blocks";
-import Grid from '../../docs/Grid.md?raw';
-import * as GridStories from "./grid.stories.js"
+import Grid from "../../docs/Grid.md?raw";
+import * as GridStories from "./grid.stories.js";
 
-<Meta title="Style/Grid System" />
+<Meta title="Foundation/Grid System" />
 
 <Markdown>{Grid}</Markdown>
 
 ## Basic Grid
 
-<Canvas of={GridStories.Basic} >
+<Canvas of={GridStories.Basic}>
   <Story of={GridStories.Basic} />
 </Canvas>
 
 ## Responsive Grid
 
-<Canvas of={GridStories.Responsive} >
+<Canvas of={GridStories.Responsive}>
   <Story of={GridStories.Responsive} />
 </Canvas>
 
 ## Hidden Columns
 
-<Canvas of={GridStories.HiddenCol} >
+<Canvas of={GridStories.HiddenCol}>
   <Story of={GridStories.HiddenCol} />
 </Canvas>
 
 ## Center Column
 
-<Canvas of={GridStories.CenterCol} >
+<Canvas of={GridStories.CenterCol}>
   <Story of={GridStories.CenterCol} />
 </Canvas>
