style(ToastContainer): toast container top positions starts after masthead and mainnav

--- a/stories/templates/Toast/additional.mdx
+++ b/stories/templates/Toast/additional.mdx
@@ -44,7 +44,7 @@ Add `dismissible` prop to allow users to close the toast
 ## Position with toast containers
 
 ToastContainers positions the toast with respect to the entire page. Adjust the `position` prop accordingly to render your toast at the correct placements
-
+Top position takes into consideration the height of masthead and mainnav.
 
 ### top-start
 
