feat(Modal): new size extra large

--- a/stories/templates/Modal/additional.mdx
+++ b/stories/templates/Modal/additional.mdx
@@ -18,6 +18,12 @@
   <Story of={ModalStories.LargeSize} />
 </Canvas>
 
+### Extra large modal
+
+<Canvas of={ModalStories.ExtraLargeSize}>
+  <Story of={ModalStories.ExtraLargeSize} />
+</Canvas>
+
 ### Fullscreen modal
 
 <Canvas of={ModalStories.FullscreenSize}>
