--- a/stories/templates/SystemBanner/additional.mdx
+++ b/stories/templates/SystemBanner/additional.mdx
@@ -21,3 +21,13 @@ In this example, the show more link opens a modal with the full message about th
 <Canvas of={SystemBannerStories.ShowMore}>
   <Story of={SystemBannerStories.ShowMore} />
 </Canvas>
+
+## Fluid
+
+By default, the SystemBanner content is contained within a max-width container. Use the `fluid` prop to remove this constraint and allow the content to stretch to the full screen width.
+
+- Use `fluid` system banner when you need the banner to span the full viewport width.
+
+<Canvas of={SystemBannerStories.Fluid}>
+  <Story of={SystemBannerStories.Fluid} />
+</Canvas>
