docs(storybook): rename the foundation docs

--- a/stories/foundation/TypographyAndLayout.mdx
+++ b/stories/foundation/TypographyAndLayout.mdx
@@ -1,8 +1,8 @@
 import { Meta, Markdown, Canvas, Story } from "@storybook/blocks";
 
-<Meta title="Foundation/Responsive" />
+<Meta title="Foundation/Typography and Layout" />
 
-# Responsive Typography and Layout
+# Typography and Layout
 
 SGDS foundation styles include a comprehensive responsive design system that automatically adapts typography sizes, line heights, and spacing across different screen sizes. All HTML elements (headings, paragraphs, labels, etc.) use CSS custom properties that scale at three primary breakpoints:
 
