docs(utility): add stories and documentation for the utlity api

--- a/stories/utilities/background-color.mdx
+++ b/stories/utilities/background-color.mdx
@@ -49,19 +49,8 @@ Background color utilities define the color of background surfaces. SGDS provide
 
 ## Form Surface Colors
 
-<Canvas of={BackgroundColorStories.FormSurfaceColors} />
+<Canvas of={BackgroundColorStories.FormColors} />
 
-## Form Primary Colors
-
-<Canvas of={BackgroundColorStories.FormPrimaryColors} />
-
-## Form Success Colors
-
-<Canvas of={BackgroundColorStories.FormSuccessColors} />
-
-## Form Danger Colors
-
-<Canvas of={BackgroundColorStories.FormDangerColors} />
 
 ## Color Groupings
 
