docs(Utility): add spacing docs

--- a/stories/layouts/introduction.mdx
+++ b/stories/layouts/introduction.mdx
@@ -1,14 +1,6 @@
-import { Meta } from "@storybook/blocks";
+import { Meta, Markdown } from "@storybook/blocks";
+import Layouts from "../../docs/Layouts.md?raw";
 
 <Meta title="Templates/Introduction" />
 
-# App Layout Templates
-
- Layout templates for common application patterns, helping you structure your pages with consistent spacing, navigation, and content containers.
-
-## Prerequisites
-
-Before using the app layout templates, ensure that you have set up the **utility CSS** in your project. This is required for all styling and spacing utilities used in the templates.
-
-See the [Utilities documentation](/docs/utilities-introduction--docs) for setup instructions.
-
+<Markdown>{Layouts}</Markdown>
