--- a/stories/utilities/introduction.mdx
+++ b/stories/utilities/introduction.mdx
@@ -53,3 +53,7 @@ Once installed and configured, you can start using SGDS utility classes in your 
 ```
 
 All utility classes follow the `sgds:` prefix convention and are fully supported by SGDS CSS variables, ensuring a seamless design system experience.
+
+## Other Available Utilities
+
+SGDS supports all standard [Tailwind CSS utilities](https://tailwindcss.com/docs) with the `sgds:` prefix. Examples include: `sgds:flex`, `sgds:justify-center`, `sgds:align-self`,`sgds:cursor-pointer`, and many more. For a complete reference of all available utilities, please refer to the [Tailwind CSS documentation](https://tailwindcss.com/docs).
